bootstrap/homeassistant-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-external
  namespace: external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homeassistant.app.local.danielr1996.de`)
      priority: 10
      services:
        - name: homeassistant-external
          port: 80
  tls:
    certResolver: letsencrypt

---
kind: Service
apiVersion: v1
metadata:
  name: homeassistant-external
  namespace: external
spec:
  type: ExternalName
  ports:
    - name: homeassistant
      port: 80
      targetPort: 8123
  externalName: homeassistant.local
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
